--- a/public/app/package.json
+++ b/public/app/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "next": "11.0.1",
     "react": "17.0.2",
